IPROTO 241 Proto 3 parser
    * IPROTO-14 Enum aliases
    * IPROTO-98 Reserved fields
    * IPROTO-3 Maps
    * Drop "proto 2" features: extensions, groups