@@ -1,14 +1,18 @@
 package org.infinispan.protostream.descriptors;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.infinispan.protostream.DescriptorParserException;
 import org.infinispan.protostream.config.AnnotationConfiguration;
 import org.infinispan.protostream.config.Configuration;
 import org.infinispan.protostream.impl.AnnotatedDescriptorImpl;
+import org.infinispan.protostream.impl.Log;
+import org.infinispan.protostream.impl.SparseBitSet;
 
 /**
  * Represents an enum in a proto file.
@@ -18,19 +22,35 @@ import org.infinispan.protostream.impl.AnnotatedDescriptorImpl;
  * @since 2.0
  */
 public final class EnumDescriptor extends AnnotatedDescriptorImpl implements GenericDescriptor {
-
    private Integer typeId;
    private final List<Option> options;
    private final List<EnumValueDescriptor> values;
-   private final Map<Integer, EnumValueDescriptor> valueByNumber = new HashMap<>();
-   private final Map<String, EnumValueDescriptor> valueByName = new HashMap<>();
+   private final Map<Integer, EnumValueDescriptor> valueByNumber;
+   private final Map<String, EnumValueDescriptor> valueByName;
    private FileDescriptor fileDescriptor;
    private Descriptor containingType;
+   private final SparseBitSet reservedNumbers;
+   private final Set<String> reservedNames;
 
    private EnumDescriptor(Builder builder) {
       super(builder.name, builder.fullName, builder.documentation);
-      this.options = Collections.unmodifiableList(builder.options);
-      this.values = Collections.unmodifiableList(builder.values);
+      this.options = List.copyOf(builder.options);
+      this.reservedNumbers = builder.reservedNumbers;
+      this.reservedNames = Set.copyOf(builder.reservedNames);
+      this.values = List.copyOf(builder.values);
+      this.valueByNumber = new HashMap<>(values.size());
+      this.valueByName = new HashMap<>(values.size());
+      Option allowAlias = options.stream().filter(o -> o.getName().equals("allow_alias")).findFirst().orElse(null);
+      if (allowAlias == null || !"true".equals(allowAlias.getValue())) {
+         SparseBitSet numbers = new SparseBitSet();
+         for (EnumValueDescriptor c : values) {
+            if (numbers.get(c.getNumber())) {
+               throw new IllegalStateException("Duplicate tag " + c.getNumber() + " in " + fullName);
+            } else {
+               numbers.set(c.getNumber());
+            }
+         }
+      }
       for (EnumValueDescriptor value : values) {
          if (name.equals(value.getName())) {
             throw new DescriptorParserException("Enum constant '" + value.getName() + "' clashes with enum type name: " + fullName);
@@ -38,16 +58,20 @@ public final class EnumDescriptor extends AnnotatedDescriptorImpl implements Gen
          if (valueByName.containsKey(value.getName())) {
             throw new DescriptorParserException("Enum constant '" + value.getName() + "' is already defined in " + fullName);
          }
-
          value.setContainingEnum(this);
          checkReserved(value);
          valueByName.put(value.getName(), value);
-         valueByNumber.put(value.getNumber(), value);
+         valueByNumber.putIfAbsent(value.getNumber(), value);
       }
    }
 
    private void checkReserved(EnumValueDescriptor value) {
-      // TODO [anistor] IPROTO-98 check reserved values and names
+      if (reservedNumbers.get(value.getNumber())) {
+         throw Log.LOG.reservedNumber(value.getNumber(), value.getName(), fullName);
+      }
+      if (reservedNames.contains(value.getName())) {
+         throw Log.LOG.reservedName(value.getName(), fullName);
+      }
    }
 
    @Override
@@ -127,16 +151,22 @@ public final class EnumDescriptor extends AnnotatedDescriptorImpl implements Gen
       return "EnumDescriptor{fullName=" + getFullName() + '}';
    }
 
-   public static final class Builder {
+   public static final class Builder implements OptionContainer<Builder>, ReservedContainer<Builder> {
       private String name;
       private String fullName;
-      private List<Option> options;
-      private List<EnumValueDescriptor> values;
+      private List<Option> options = new ArrayList<>();
+      private List<EnumValueDescriptor> values = new ArrayList<>();
       private String documentation;
+      private final SparseBitSet reservedNumbers = new SparseBitSet();
+      private final Set<String> reservedNames = new HashSet<>();
 
       public Builder withName(String name) {
          this.name = name;
          return this;
+      }
+
+      String getName() {
+         return name;
       }
 
       public Builder withFullName(String fullName) {
@@ -149,13 +179,39 @@ public final class EnumDescriptor extends AnnotatedDescriptorImpl implements Gen
          return this;
       }
 
+      @Override
+      public Builder addOption(Option option) {
+         this.options.add(option);
+         return this;
+      }
+
       public Builder withValues(List<EnumValueDescriptor> values) {
          this.values = values;
          return this;
       }
 
+      public Builder addValue(EnumValueDescriptor.Builder value) {
+         this.values.add(value.build());
+         return this;
+      }
+
       public Builder withDocumentation(String documentation) {
          this.documentation = documentation;
+         return this;
+      }
+
+      public Builder addReserved(int number) {
+         reservedNumbers.set(number);
+         return this;
+      }
+
+      public Builder addReserved(int from, int to) {
+         reservedNumbers.set(from, to + 1);
+         return this;
+      }
+
+      public Builder addReserved(String name) {
+         reservedNames.add(name);
          return this;
       }
 
